<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stat</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="markus.kv1@gmail.com">markus</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>Eigen3</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ee4308_lib</depend>

  <build_depend>eigen</build_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>

  <build_export_depend>eigen</build_export_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
